# nodestradamus

./: .cursorrules  .env.example  .gitignore  .nodestradamusignore  AGENTS.md  CHANGELOG.md  ENHANCEMENTS.md  LICENSE  README.md  mcp-server-phase1-tasks.md  opencode.json  pyproject.toml  run-mcp.sh  tasklist.mdc  utils.py
.cursor/graph/: README.md
.cursor/rules/: 000-onboarding.mdc  001-router.mdc  002-meta-generator.mdc  003-code-quality.mdc  003-response-quality.mdc  004-response-quality.mdc  005-security.mdc  100-python.mdc  101-type-hints.mdc  102-git.mdc  106-mcp-server.mdc  107-analyzers.mdc  200-project.mdc  301-testing.mdc  302-validation.mdc  303-api-patterns.mdc  304-architecture.mdc  305-dependency-graph.mdc  306-project-management.mdc  README.md  general.mdc  python.mdc
.github/workflows/: ci.yml  housekeeping.yml  issue-triage.yml  opencode-review.yml  opencode.yml  rust-build.yml  update-cursorrules.yml  update-graphs.yml  validate-rules.yml
.opencode/agents/: documenter.md  housekeeper.md  reviewer.md
.opencode/skills/code-review/: SKILL.md
.opencode/skills/git-commit/: SKILL.md
.opencode/skills/housekeeping/: SKILL.md
.opencode/skills/rules-sync/: SKILL.md
.opencode/skills/task-planning/: SKILL.md
docs/: advanced-features.md  codence-rule-generation-case-study.md  creative-use-cases.md  cursor-rules.md  customization.md  dependency-graphs.md  getting-started-workflow.md  github-setup.md  glossary.md  governance.md  graph-theory-reference.md  installation.md  mcp-server-spec.md  opencode-config.md  publishing-pypi.md  quick-health-check.md  troubleshooting.md  workflows.md
nodestradamus/: __init__.py  __main__.py  cli.py  logging.py
nodestradamus/analyzers/: __init__.py  clustering.py  constants.py  dead_code.py  deps.py  docs.py  duplicates.py  embedding_providers.py  embeddings.py  fingerprints.py  git_cooccurrence.py  graph_algorithms.py  ignore.py  impact.py  project_scout.py  string_extraction.py  string_refs.py  string_topology.py
nodestradamus/analyzers/code_parser/: __init__.py  base.py  bash.py  cpp.py  fields.py  python.py  rust.py  sql.py  typescript.py
nodestradamus/mcp/: __init__.py  context.py  server.py
nodestradamus/mcp/tools/: __init__.py  definitions.py  dispatch.py
nodestradamus/models/: __init__.py  graph.py
nodestradamus/utils/: cache.py  db.py  registry.py  snapshots.py
rust/: Cargo.toml
rust/src/: graph.rs  lib.rs
scripts/: __init__.py  analyze_git_cooccurrence.py  analyze_python_deps.py  analyze_ts_deps.py  analyze_ts_treesitter.py  benchmark_graph.py  benchmark_mcp_tools.py  detect_rule_conflicts.py  greeting.py  merge_graphs.py  validate_rules.py
tests/: __init__.py  conftest.py  test_analyze_deps_accuracy.py  test_analyze_git_cooccurrence.py  test_analyze_python_deps.py  test_analyze_ts_deps.py  test_bash_deps.py  test_cache_management.py  test_cpp_deps.py  test_deps.py  test_detect_rule_conflicts.py  test_docs_analyzer.py  test_embeddings.py  test_fingerprints.py  test_graph_algorithms.py  test_ignore.py  test_impact_matching.py  test_incremental_embeddings.py  test_mcp_server.py  test_merge_graphs.py  test_parse_cache.py  test_path_aliases.py  test_performance_optimizations.py  test_project_scout.py  test_refactor_analysis.py  test_rules_audit.py  test_rules_validation_mcp.py  test_rust_deps.py  test_schema_fields.py  test_smart_pipeline.py  test_snapshots.py  test_sql_deps.py  test_sqlite_storage.py  test_string_extraction.py  test_string_refs.py  test_string_topology.py  test_tool_compatibility.py  test_validate_rules.py
tests/fixtures/sample_bash/: main.sh  utils.sh
tests/fixtures/sample_docs/: README.md  api.md  main.py  stale.md  utils.py
(+72 files in other folders)
